@@ -28,7 +28,7 @@ if (!defined('APPPATH'))
 					</select>
 					<select name="dropdownTimeslots">
 						{chooseTimeslot}
-						<option value="{key}"><{value}</option>
+						<option value="{key}">{value}</option>
 						{/chooseTimeslot}
 					</select>
 					<input type='submit' value='Submit'>
